Main page handles results better
I changed how the main page handled the search result array so that it no longer hardcoded contact info into the dynamically generated HTML, so it can adjust when the contact info is updated. Sorry Jayden, you'll have to re-add your database code.

--- a/mainPage.htm
+++ b/mainPage.htm
@@ -4,6 +4,9 @@
 
 <script type="text/javascript">
 
+// This global variable holds the list of results produced by a search.
+var searchList;
+
 // TODO: Implement the JSON and such when the APIs are ready.
 function searchContacts()
 {
@@ -16,109 +19,187 @@ function searchContacts()
   var result = document.getElementById("searchResult");
   result.innerHTML = ""; // Clear the login result field.
 
-  // This is the array used to store the contacts.
-  var contactList = "";
-
-  //This is where we submit the request to the server. TODO: Update UserId to read logged in user's id, using 2 to test for now.
-  var jsonPayload = '{"first" : "' + first + '", "last" : "' + last + '", "phone" : "' + phone + '", "email" : "' + email + '", "userID" : "' + '2' + '"}';
-  var url = urlBase + '/SearchContact.' + extension;
-	
-	var xhr = new XMLHttpRequest();
-	xhr.open("POST", url, true);
-	xhr.setRequestHeader("Content-type", "application/json; charset=UTF-8");
-	try
-	{
-		xhr.onreadystatechange = function() 
-		{
-			if (this.readyState == 4 && this.status == 200) 
-			{
-				result.innerHTML = "Contact(s) retrieved.<br>"
-				var jsonObject = JSON.parse( xhr.responseText );
-				
-        // Add the parsed JSON to the contactList array, to fill it with contacts.
-				for( var i=0; i<jsonObject.results.length; i++ )
-				{
-					contactList += jsonObject.results[i];
-					if( i < jsonObject.results.length - 1 )
-					{
-						colorList += "<br />\r\n";
-					}
-
-          // For each entry, I show a contact with the text on the left, and Update and Remove buttons on the right.
-          result.innerHTML += makeContactFloats(contactList[i], i);
-				}
-
-        // If no results were found, say so.
-        if (jsonObject.results.length == 0)
-        {
-            result.innerHTML = "No contacts found.<br>";
-        }
-		
-				document.getElementsByTagName("p")[0].innerHTML = colorList;
-			}
-		};
-		xhr.send(jsonPayload);
-	}
-	catch(err)
-	{
-		result.innerHTML = err.message;
-	}
+  // TODO: This is where we would submit the request to the server.
+  result.innerHTML = "Contact(s) retrieved.<br>"
+  var jsonPayload = '{"first" : "' + first + '", "last" : "' + last + '", "phone" : "' + phone + '", "email" : "' + email + '", "userID" : "' + '1' + '"}';
+  alert("TODO: Should submit to search:\n" + jsonPayload);
   
+  // This test data can substitute for the request output.
+  // It's rendered as an array of objects, each with fields for the contact data, and another for the primary key.
+  var dummyContacts = [{first:"William", last:"Tell", phone:"", email:"", primKey:10}, 
+		       {first:"Tommy", last:"Tutone", phone:"8675309", email:"", primKey:15}, 
+		       {first:"Professor", last:"Nelson", phone:"", email:"hnelson@uni.edu", primKey:45}, 
+		       {first:"Jane", last:"Smith", phone:"5555555", email:"jsmith@yahoo.com", primKey:46}];
+
+  // First we assign it to the global so that I can access it from outside this function.
+  searchList = dummyContacts;
+
+  // For each entry, I show a contact with the text on the left, and Update and Remove buttons on the right.
+  for (var i = 0; i < searchList.length; i++)
+  {
+    result.innerHTML += makeContactFloats(searchList, i);
+  }
+  // If no results were found, say so.
+  if (searchList.length == 0)
+  {
+    result.innerHTML = "No contacts found.<br>";
+  }
 }
 
-// This function generates a piece of text and two buttons in HTML to add to the display.
-function makeContactFloats(entry, index)
+// This function dynamically generates some HTML to add to the display. It contains two spans; one shows the contact data,
+// and the other lets the user update the data.
+function makeContactFloats(entries, index)
 {
   // First make the contact information.
-  var contactInfo = entry.first + " " + entry.last;
-  if (entry.phone != "")
+  var contactInfo = entries[index].first + " " + entries[index].last;
+  if (entries[index].phone != "")
   {
-    contactInfo += ", " + entry.phone;
+    contactInfo += ", " + entries[index].phone;
   }
 
-  if (entry.email != "")
+  if (entries[index].email != "")
   {
-    contactInfo += ", " + entry.email;
+    contactInfo += ", " + entries[index].email;
   }
 
-  // Next make the parameter listss for the two onClick functions. Both of them need the primary key (to know what database entry to act on)
-  // and the display index (so that it can update the displayed data without re-fetching), but the Update one also needs the 
-  // full data of the entry (to display it as the default data).
-  var deleteParams = entry.primKey + ", " + index;
-  var updateParams = "'" + entry.first + "', '" + entry.last + "', '" + entry.phone + "', '" + entry.email + "', " + deleteParams;
+  // Next make the parameter lists for the onClick functions. Both need the list of search entries and the index.
+  var params = "searchList, " + index;
 
-  // Then we need to give a name to the div to reference it later.
-  var divName = "entryDiv" + index;
+  // Then we need to give a name to the divs to reference them later.
+  var divName1 = "entryDiv" + index;
+  var divName2 = "updateDiv" + index;
 
-  // Now plug all these into the HTML.
-  var fullContact = '<div id="' + divName + '"><p>' + contactInfo + 
+  // We also need to name the four search boxes in the update div so we can get the information from them.
+  var firstBox = "first" + index;
+  var lastBox = "last" + index;
+  var phoneBox = "phone" + index;
+  var emailBox = "email" + index;
+
+  // Finally, we need to name the span for the results of updating, and the paragraph that has the contact info.
+  var spanName = "results" + index;
+  var paraName = "contactInfo" + index;
+
+  // Now plug all these into the HTML. Yes, it is a doozy @_@.
+  var div1 = '<div id="' + divName1 + '"><p id="' + paraName + '">' + contactInfo + 
 			'</p><span class="fullWidth"><input type=button value="Delete" class="smallButton" onClick="deleteContact(' + 
-			deleteParams + ');"><input type=button value="Edit" class="smallButton" onClick="updateContact(' + updateParams + ');"></span></div>';
-  return fullContact;
+			params + ');"><input type=button value="Edit" class="smallButton" onClick="updateContact(' + params + ');"></span></div>';
+  var div2 = '<div id="' + divName2 + '" style="display:none;"><span class="fullWidth"><input type="text" id="' + firstBox + 
+		'" class="searchBox" placeholder="First name"><input type="text" id="' + lastBox + 
+		'" class="searchBox" placeholder="Last name"><input type="text" id="' + phoneBox + 
+		'" class="searchBox" placeholder="Phone number"><input type="text" id="' + emailBox + 
+'" class="searchBox" placeholder="Email address"></span><span class="fullWidth"><input type=button value="Cancel" class="smallButton" onClick="cancelUpdate(' + 
+index + ');"><input type=button value="Accept" class="smallButton" onClick="acceptUpdate(' + params + ');"></span><span id="' + spanName + 
+'" class="results errorText"></div>';
+
+  return div1 + div2;
 }
 
-// Send the user to the Add Contact page when the click the Add Contact button.
+// Send the user to the Add Contact page when they click the Add Contact button.
 function goToAdd()
 {
   location.href = "addContact.html";
 }
 
-// TODO: This function needs a modal box and database access.
-function updateContact(first, last, phone, email, primKey, index)
+// TODO: This function needs database access.
+function updateContact(entries, index)
 {
-  alert("TODO: Bring up a modal dialog box with default values '" + first + "', '" + last + "', '" + phone + "', '" + email + 
-		"' to update the database entry with key " + primKey + ", and update the div indexed " + index + ".");
+  // Bring up the update interface by switching which div is displayed.
+  document.getElementById("entryDiv" + index).style.display = "none";
+  document.getElementById("updateDiv" + index).style.display = "block";
+
+  // Copy the original data in the contact to the search boxes.
+  document.getElementById("first" + index).value = entries[index].first;
+  document.getElementById("last" + index).value = entries[index].last;
+  document.getElementById("phone" + index).value = entries[index].phone;
+  document.getElementById("email" + index).value = entries[index].email;
+}
+
+// Get rid of the update interface when the user clicks Cancel.
+function cancelUpdate(index)
+{
+  document.getElementById("entryDiv" + index).style.display = "block";
+  document.getElementById("updateDiv" + index).style.display = "none";
+}
+
+// Update an entry when the user clicks Accept in the update interface.
+function acceptUpdate(entries, index)
+{
+  // Get the new contact info from the text boxes.
+  var first = document.getElementById("first" + index).value;
+  var last = document.getElementById("last" + index).value;
+  var phone = document.getElementById("phone" + index).value;
+  var email = document.getElementById("email" + index).value;
+
+  var result = document.getElementById("results" + index);
+  result.innerHTML = ""; // Clear the update result field.
+  
+
+  // Check for invalid data: either missing names, invalid phone, or invalid email.
+  // Since the email and phone are optional, don't check them if empty.
+  if (first == "" || last == "")
+  {
+    result.innerHTML += "Please fill in first and last name. <br>";
+  }
+
+  var phoneRegex = /^\d{7}$|^\d{10}$/; //Matches a string of 7 or 10 digits. 
+  if (phone != "" && !phoneRegex.test(phone))
+  {
+    result.innerHTML += "Phone number must be either 7 or 10 digits (no dashes). <br>";
+  }
+  
+  // Check for a valid email (foo@bar.baz) via regex.
+  var emailRegex = /.+\@.+\..+/; 
+  if (email != "" && !emailRegex.test(email))
+  {
+    result.innerHTML += "Email must be of the form name@site.foo. <br>";
+  }
+
+  //TODO: Also check if the entry is duplicate?
+
+  // If we got no errors, then we can submit the data.
+  if (result.innerHTML == "")
+  {
+    // TODO: This is where we would submit the request to the server.
+    var jsonPayload = '{"first" : "' + first + '", "last" : "' + last + '", "phone" : "' + phone + '", "email" : "' + email + '", "userID" : "' + '1' + '", "primKey": ' + entries[index].primKey + '}';
+    alert("TODO: Should submit to update:\n" + jsonPayload);
+    
+    // Update the local version of the entry. First we make the new contact info.
+    var contactInfo = first + " " + last;
+    if (phone != "")
+    {
+      contactInfo += ", " + phone;
+    }
+
+    if (email != "")
+    {
+      contactInfo += ", " + email;
+    }
+
+    // Then we find the paragraph where the contact info goes and replace it.
+    document.getElementById("contactInfo" + index).innerHTML = contactInfo;
+
+    // Replace the data in the array as well, for the next update.
+    entries[index].first = first;
+    entries[index].last = last;
+    entries[index].phone = phone;
+    entries[index].email = email;
+
+    // Finally, switch away from the update interface.
+    document.getElementById("entryDiv" + index).style.display = "block";
+    document.getElementById("updateDiv" + index).style.display = "none";
+  }
 }
 
 // TODO: Remove a contact after warning the user.
-function deleteContact(entryKey, entryInd)
+function deleteContact(entries, index)
 {
   if(confirm("Do you want to delete this contact?"))
   {
-    alert("TODO: Tell the database to delete the entry with key " + entryKey + ".");
+    var primKey = entries[index].primKey;
+    alert("TODO: Tell the database to delete the entry with key " + primKey + ".");
 
     // Remove the entry referred to by setting its display to none.
-    document.getElementById("entryDiv" + entryInd).style.display = "none";
+    document.getElementById("entryDiv" + index).style.display = "none";
   }
 }
 
