--- a/mainPage.htm
+++ b/mainPage.htm
@@ -206,7 +206,10 @@ function deleteContact(entries, index)
 //TODO: Return the user to the login page and clear their cookie.
 function logOut()
 {
-  alert("TODO: Clear the user's cookie.");
+  userId = 0;
+  firstName = "";
+  lastName = "";
+  document.cookie = "firstName= ; expires = Thu, 01 Jan 1970 00:00:00 GMT";
   location.href = "index.html";
 }
 
