--- a/addContact.html
+++ b/addContact.html
@@ -6,6 +6,13 @@
   <link href="css/styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
+  <script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', function() 
+  {
+  	readCookie();
+  }, false);
+  </script>
+
 </head>
 <body>
 
