--- a/mainPage.htm
+++ b/mainPage.htm
@@ -5,6 +5,13 @@
   <script type="text/javascript" src="js/code.js"></script>
 <link href="css/styles.css" rel="stylesheet">
 
+<script type="text/javascript">
+	document.addEventListener('DOMContentLoaded', function() 
+	{
+		readCookie();
+	}, false);
+	</script>
+
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <body>
