Finalized SearchContact, Register, and AddContacts, added first and last name buttons to Register.html

--- a/Register.html
+++ b/Register.html
@@ -13,6 +13,8 @@
 
 <div id="mainDiv">
 	<span id="inner-title">REGISTRY PAGE</span>
+	<input type="text" id="registerFirstName" placeholder="First Name"/><br />
+	<input type="text" id="registerLastName" placeholder="Last Name"/><br />
 	<input type="text" id="registerName" placeholder="Username" /><br />
 	<input type="password" id="registerPassword" placeholder="Password"/><br />
 	<input type="button" id="registerButton" class="buttons" value="Register" onclick="registerUser();">
