Updated html texts to give instructions and better represent pages

--- a/mainPage.htm
+++ b/mainPage.htm
@@ -1,9 +1,10 @@
 <html>
 <head>
-	<title>Small Project Main Page Demo</title>
+	<title>Contact Manager</title>
   
   <script type="text/javascript" src="js/code.js"></script>
 <link href="css/styles.css" rel="stylesheet">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🫂</text></svg>">
 
 <script type="text/javascript">
 	document.addEventListener('DOMContentLoaded', function() 
@@ -16,10 +17,11 @@
 </head>
 <body>
 
-<h1 id="title">Main Page</h1>
+<h1 id="title">Contact Manager</h1>
 
 <div id="mainDiv">
-	<span id="inner-title"><br></span>
+  
+	<span id="inner-title">To search a contact, enter in their credentials and press search. Otherwise to add a contact, please click the button below.<br></span>
         <span class="fullWidth">
 	  <input type="text" id="firstSearch" class="searchBox" placeholder="First name">
           <input type="text" id="lastSearch" class="searchBox" placeholder="Last name">
