--- a/Register.html
+++ b/Register.html
@@ -1,18 +1,19 @@
 <html>
 <head>
-	<title>Register Demo</title>
+	<title>Contact Manager Registry</title>
   <script type="text/javascript" src="js/code.js"></script>
 	<script type="text/javascript" src="js/md5.js"></script>
   <link href="css/styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🫂</text></svg>">
+
 </head>
 <body>
 
-<h1 id="title">Login Page Demo</h1>
+<h1 id="title">User Registry</h1>
 
 <div id="mainDiv">
-	<span id="inner-title">REGISTRY PAGE</span>
+	<span id="inner-title">Please enter in your details below to register an account.</span>
 	<input type="text" id="registerFirstName" placeholder="First Name"/><br />
 	<input type="text" id="registerLastName" placeholder="Last Name"/><br />
 	<input type="text" id="registerName" placeholder="Username" /><br />
