--- a/addContact.html
+++ b/addContact.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-  <title>Small Project New Contact Demo</title>
+  <title>Add Contact</title>
 
   <script type="text/javascript" src="js/code.js"></script>
   <link href="css/styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🫂</text></svg>">
 
   <script type="text/javascript">
   document.addEventListener('DOMContentLoaded', function() 
@@ -19,7 +20,7 @@
 <h1 id="title">Add Contact</h1>
 
 <div id="mainDiv">
-	<span id="inner-title">To add a new contact, please give the first and last name; <br>email and phone are optional.<br></span>
+	<span id="inner-title">To add a new contact, please give the contact's first and last name, phone number and email.<br></span>
 	<input type="text" id="firstName" placeholder="First name" /><br />
         <input type="text" id="lastName" placeholder="Last name" /><br />
         <input type="text" id="phoneNumber" placeholder="Phone number" /><br />
