--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html>
 <head>
-	<title>Login Demo</title>
+	<title>Contact Manager Login</title>
 
   <script type="text/javascript" src="js/code.js"></script>
 	<script type="text/javascript" src="js/md5.js"></script>
   <link href="css/styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🫂</text></svg>">
+
 
 </head>
 <body>
 
-<h1 id="title">Login Page Demo</h1>
+<h1 id="title">User Login</h1>
 
 <div id="mainDiv">
-	<span id="inner-title">PLEASE LOG IN</span>
+	<span id="inner-title">Please log in or register to create an account.</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<input type="button" id="loginButton" class="buttons" value="Login" onclick="logInUser();">
