Added divider bars
I added the divider bars between contacts that Leinecker requested; also fixed a bug I discovered where if you edited a contact twice in a row, the text boxes will populate with the data before the first edit, because the code that was supposed to change the local copy of the contact referred to the fields by wrong names.

--- a/addContact.html
+++ b/addContact.html
@@ -26,8 +26,9 @@
         <input type="text" id="phoneNumber" placeholder="Phone number" /><br />
         <input type="text" id="emailAddress" placeholder="Email address" /><br />
 	<input type="button" id="checkButton" class="buttons spaced" value="Add contact" onclick="checkContact();">
-        <input type="button" id="cancelButton" class="buttons spaced" value="Cancel" onclick="goBack();">
-	<span id="addResult" class="results errorText"></span>
+        <span id="addResult" class="results errorText"></span>
+        <input type="button" id="cancelButton" class="buttons spaced" value="Back" onclick="goBack();">
+	
 </div>
 
 </body>
