--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1 id="title">User Login</h1>
+<h1 id="title">My FriendBook</h1>
 
 <div id="mainDiv">
 	<span id="inner-title">Please log in or register to create an account.</span>
